--- a/ToeicWeb/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Views/Shared/_Layout.cshtml
@@ -13,58 +13,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-5 bg-secondary">
-            <div class="container-fluid" >
-                <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="Index">TOEIC <i class="bi bi-highlighter"></i></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1 d-md-flex justify-content-evenly">
-                        <li class="nav-item m-sm-2 fs-6 ">
-                            <a class="nav-link text-sm-center fw-medium tranN" asp-area="Customer" asp-controller="Home" asp-action="Index">
-                                <i class="bi bi-house-door fst-normal">  Trang chủ</i>
-                            </a>
-                                       
-                        </li>
-                        <li class="nav-item m-sm-2 fs-6 ">
-                            <a class="nav-link text-sm-center  fw-medium tranN" asp-area="Customer" asp-controller="Home" asp-action="Vocabulary">
-                                <i class="bi bi-translate fst-normal"> Từ vựng</i>
-                            </a>
-                        </li>
-                         <li class="nav-item m-sm-2 fs-6 ">
-                            <a class="nav-link text-sm-center  fw-medium tranN" asp-area="Customer" asp-controller="Home" asp-action="Grammar">
-                                <i class="bi bi-book fst-normal"> Grammar</i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-sm-end">
-                 
-                    <ul class="navbar-nav flex-grow-1 d-md-flex justify-content-evenly">
-                        <li class="nav-item m-sm-2 ">
-                            <a class="nav-link text-sm-center  fw-medium tranN" asp-area="Admin" asp-controller="HomeAdmin" asp-action="Index">
-                                <i class="bi bi-person-lines-fill fst-normal"> Admin</i>
-                            </a>
-                        </li>
-                      
-            
-                        <li class="nav-item m-sm-2 fs-6 ">
-                            <a class="nav-link text-sm-center  fw-medium tranN">
-                                <i class="bi-brightness-high-fill fst-normal" id="toggleDark">Giao diện</i>
-                            </a>
-
-                        </li>
-                        <li class="nav-item m-sm-2 fs-6 ">
-                            <a class="nav-link text-sm-center  fw-medium tranN" asp-area="" asp-controller="Home" asp-action="Index">
-                                <i class="bi bi-person fst-normal">Tài khoản </i>
-                            </a>
-                        </li>
-                    </ul>
-            </div>
-        </nav>
+        @await Html.PartialAsync("_Navbar")
     </header>
     <div class="container">
         <main role="main" class="pb-3">
