--- a/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<div class="row pb-3 bgC" style="margin-top: 8rem;">
+<div class="row pb-3 bgC">
 
     <h5 class=" mt-5 ">Luyện Nghe <i class="bi bi-headphones"></i></h5>
     <div class="col-lg-3 col-sm-6">
