--- a/ToeicWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ToeicWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using ToeicWeb.Areas.Identity
 @using ToeicWeb.Areas.Identity.Pages
+@using ToeicWeb.Utility
+@using ToeicWeb.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
