--- a/ToeicWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ToeicWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,12 +5,13 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
+@* <h1>@ViewData["Title"]</h1> *@
+<div class="row justify-content-center">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
+                <img class="h-25 w-25 d-sm-block me-sm-auto ms-sm-auto" src="~/customer/images/Register.png" />
+                <h2 class="text-center">Đăng Nhập</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
@@ -30,23 +31,40 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Đăng nhập</button>
                 </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                <div class="">
+                    <p class="mt-3 d-md-flex justify-content-center">
+                        <a id="forgot-password" asp-page="./ForgotPassword">Quên mật khẩu?</a>
                     </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                    <p class="d-md-flex justify-content-center">Hoặc đăng nhập bằng <hr /></p>
+
+                    <div class="d-md-flex justify-content-center ">
+
+                        <p class="mx-sm-3">
+                            <i class="bi bi-facebook"></i><a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">
+                            Facebook
+                        </a>
                     </p>
+                        <p class="mx-sm-3">
+                            <i class="bi bi-google"></i><a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">
+                            Google
+                        </a>
+                    </p>
+                    </div>
+
+                </div>
+                <div class="d-md-flex justify-content-center">
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                        Bạn chưa có tài khoản?<a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">
+                            Đăng ký ngay
+                        </a>.
                     </p>
                 </div>
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+@*     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to log in.</h3>
             <hr />
@@ -75,7 +93,7 @@
                 }
             }
         </section>
-    </div>
+    </div> *@
 </div>
 
 @section Scripts {
