--- a/ToeicWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ToeicWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,24 +5,25 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h3>@ViewData["Title"]</h3>
-<partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
+
+@* <partial name="_StatusMessage" for="StatusMessage" /> *@
+<div class="row justify-content-center">
+    <h3 class="text-center"> @ViewData["Title"]</h3>
+    <div class="col-md-4">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
                 <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
                 <label asp-for="Username" class="form-label"></label>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            
+        </form>
+        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <button id="logout" type="submit" class="w-100 btn btn-lg btn-primary">Logout</button>
         </form>
     </div>
+
+       
 </div>
 
 @section Scripts {
