--- a/ToeicWeb/Views/Shared/_Navbar.cshtml
+++ b/ToeicWeb/Views/Shared/_Navbar.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using ToeicWeb.Utility
+
+<!DOCTYPE html>
 
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-5 bg-secondary">
     <div class="container-fluid">
@@ -8,7 +10,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-            <ul class="navbar-nav flex-grow-1 d-md-flex justify-content-evenly">
+            <ul class="navbar-nav me-auto">
                 <li class="nav-item m-sm-2 fs-6 ">
                     <a class="nav-link text-sm-center fw-medium tranN" asp-area="Customer" asp-controller="Home" asp-action="Index">
                         <i class="bi bi-house-door fst-normal">  Trang chủ</i>
@@ -25,30 +27,23 @@
                         <i class="bi bi-book fst-normal"> Grammar</i>
                     </a>
                 </li>
+                @if (User.IsInRole(SD.Role_Admin))
+                {
+                    <li class="nav-item m-sm-2 ">
+                        <a class="nav-link text-sm-center  fw-medium tranN" asp-area="Admin" asp-controller="HomeAdmin" asp-action="Index">
+                            <i class="bi bi-person-lines-fill fst-normal"> Admin</i>
+                        </a>
+                    </li>
+                }
             </ul>
-        </div>
-
-        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-sm-end">
-
-            <ul class="navbar-nav flex-grow-1 d-md-flex justify-content-evenly">
-                <li class="nav-item m-sm-2 ">
-                    <a class="nav-link text-sm-center  fw-medium tranN" asp-area="Admin" asp-controller="HomeAdmin" asp-action="Index">
-                        <i class="bi bi-person-lines-fill fst-normal"> Admin</i>
-                    </a>
-                </li>
-
-
+                <ul class="navbar-nav flex-grow-1 d-md-flex justify-content-end">
                 <li class="nav-item m-sm-2 fs-6 ">
                     <a class="nav-link text-sm-center  fw-medium tranN">
                         <i class="bi-brightness-high-fill fst-normal" id="toggleDark">Giao diện</i>
                     </a>
-
-                </li>
-                <li class="nav-item m-sm-2 fs-6 ">
-                    <a class="nav-link text-sm-center  fw-medium tranN" asp-area="" asp-controller="Home" asp-action="Index">
-                        <i class="bi bi-person fst-normal">Tài khoản </i>
-                    </a>
                 </li>
             </ul>
+            <partial name="_LoginPartial"/>
         </div>
+
 </nav>
