--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -101,7 +105,7 @@
         <!-- Content Start -->
         <div class="content">
             <!-- Navbar Start -->
-            <nav class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
+            <nav class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-sm-2">
                 <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0"><i class="fa fa-user-edit"></i></h2>
                 </a>
@@ -110,15 +114,14 @@
                 </a>
               
                 <div class="navbar-nav align-items-center ms-auto">
-                
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <img class="rounded-circle me-lg-2" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                            <span class="d-none d-lg-inline-flex">Admin</span>
-                        </a>
+                        <a style="cursor:pointer" data-bs-toggle="dropdown" class="nav-link dropdown-toggle" title="Manage"> @UserManager.GetUserName(User)!</a>
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
-                            <a href="#" class="dropdown-item">Thông tin cá nhân</a>
-                            <a href="#" class="dropdown-item">Đăng xuất</a>
+                            @* <a id="manage" class="nav-link " asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="dropdown-item">
+                                Thông tin cá nhân</a> *@
+                            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                <button id="logout" type="submit" class="w-100 btn btn-nobackg" >Đăng xuất</button>
+                            </form>
                         </div>
                     </div>
                 </div>
