--- a/ToeicWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ToeicWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -9,7 +9,7 @@
 @* <partial name="_StatusMessage" for="StatusMessage" /> *@
 <div class="row justify-content-center">
     <h3 class="text-center"> @ViewData["Title"]</h3>
-    <div class="col-md-4">
+    <div class="px-20">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -19,7 +19,7 @@
             
         </form>
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="w-100 btn btn-lg btn-primary">Logout</button>
+            <button id="logout" type="submit" class="w-100 btn btn-lg btn-primary">Đăng xuất</button>
         </form>
     </div>
 
