--- a/ToeicWeb/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/ToeicWeb/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -5,20 +5,20 @@
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+        Layout = "/Views/Shared/_Layout.cshtml";
     }
 }
 
-<h1>Manage your account</h1>
+@* <h1>Manage your account</h1> *@
 
 <div>
-    <h2>Change your account settings</h2>
-    <hr />
+@*     <h2>Change your account settings</h2> *@
+@*     <hr /> *@
     <div class="row">
-        <div class="col-md-3">
+       @*  <div class="col-md-3">
             <partial name="_ManageNav" />
-        </div>
-        <div class="col-md-9">
+        </div> *@
+        <div class="">
             @RenderBody()
         </div>
     </div>
