--- a/ToeicWeb/Views/Shared/_LoginPartial.cshtml
+++ b/ToeicWeb/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,7 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+
     <li class="nav-item">
         <a id="manage" class="nav-link " asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
@@ -14,10 +15,10 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link " id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link " id="register" asp-area="Identity" asp-page="/Account/Register">Đăng ký</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link " id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link " id="login" asp-area="Identity" asp-page="/Account/Login">Đăng nhập</a>
     </li>
 }
 </ul>
