--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -88,13 +88,13 @@
                     </div>
 
                     <div class="nav-item">
-                        <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">
-                            <i class="bi bi-person-bounding-box"></i>Quản lý tài khoản
+                        <a class="nav-link" asp-area="Admin" asp-controller="User" asp-action="Index">
+                            <i class="bi bi-person-bounding-box text-white"></i>Quản lý tài khoản
                         </a>
                     </div>
                     <div class="nav-item">
                         <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Index">
-                            <i class="bi bi-house-door"></i>Trang chủ
+                            <i class="bi bi-house-door text-white"></i>Trang chủ
                         </a>
                     </div>
 
