--- a/ToeicWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ToeicWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,29 +6,34 @@
 
 @* <h1>@ViewData["Title"]</h1> *@
 
-<div class="row justify-content-center">
+<div class="row justify-content-center ">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <img class="h-25 w-25 d-sm-block me-sm-auto ms-sm-auto" src="~/customer/images/Register.png" />
             <h2 class="text-center">Đăng ký</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
+            <div class="form-floating mb-3 text-dark">
+                <input asp-for="Input.Name" class="form-control" autocomplete="name" aria-required="true" placeholder="name@example.com" />
+                <label asp-for="Input.Name">Họ tên</label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3 text-dark">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
+            <div class="form-floating mb-3 text-dark">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
+                <label asp-for="Input.Password">Mật khẩu</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
+            <div class="form-floating mb-3 text-dark">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                <label asp-for="Input.ConfirmPassword">Xác nhận mật khẩu</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
+            <div class="form-floating mb-3 text-dark">
                 <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
                     <option disabled selected>-Select Role-</option>
                 </select>
