--- a/ToeicWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -1,16 +1,19 @@
-﻿
-<!DOCTYPE html>
-
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-5 bg-secondary">
-    <div class="container-fluid">
-        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item m-sm-2 fs-6 ">
-                    <a class="nav-link text-sm-center fw-medium tranN" asp-area="Customer" asp-controller="Home" asp-action="Index">
-                        <i class="bi bi-chevron-left"> Part 1 </i>
-                    </a>
-               </ul>
+﻿<a class="col-lg-3 col-sm-6 text-decoration-none" asp-area="Customer" asp-controller="Home" asp-action="Test">
+    <div class="col d-sm-flex justify-content-sm-center">
+        <div class="col-8 p-1 border-primary mb-3 hV">
+            <div class="shadow border rounded bgC">
+                <div class="pb-0">
+                    <div class="pl-1 m-2 mx-3 ">
+                        <p class="text-dark mb-2"> <b>Photographs 01</b></p>
+                        <p class="">
+                            <span class="badge rounded-pill bg-primary">
+                                2024 Format
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
-</nav>
-
-<div>Con</div>
+    </div>
+   
+</a>
