--- a/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -14,7 +14,8 @@
                             <div class="pl-1">
                             <p class=" text-center"> <b>Part 1</b></p>
                                 <p class="text-center">
-                                <span class="badge rounded-pill bg-primary">Mô tả hình ảnh</span>
+                                <span class="badge rounded-pill bg-primary">
+                                    <i class="bi bi-images"></i> Mô tả hình ảnh</span>
                                 </p>
                             </div>
                         </div>
@@ -40,7 +41,9 @@
                             <p class="  text-center"> <b>Part 2</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Hỏi và trả lời</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-chat-left-text"></i> Hỏi và trả lời
+                            </span>
                         </p>
                     </div>
 
@@ -66,7 +69,9 @@
                             <p class="  text-center"> <b>Part 3</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Đoạn hội thoại</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-people-fill"></i> Đoạn hội thoại
+                            </span>
                         </p>
                     </div>
 
@@ -92,7 +97,9 @@
                             <p class="  text-center"> <b>Part 4</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Bài nói chuyện</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-telephone"></i> Bài nói chuyện
+                            </span>
                         </p>
                     </div>
 
@@ -120,7 +127,9 @@
                             <p class="  text-center"> <b>Part 5</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Hoàn thành câu</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-ui-checks"></i> Hoàn thành câu
+                            </span>
                         </p>
                     </div>
 
@@ -146,7 +155,9 @@
                             <p class=" text-center"> <b>Part 6</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Hoàn thành đoạn văn</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-journal-check"></i> Hoàn thành đoạn văn
+                            </span>
                         </p>
                     </div>
 
@@ -172,7 +183,9 @@
                             <p class=" text-center"> <b>Part 7</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Đọc hiểu</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-file-earmark-text"></i> Đọc hiểu
+                            </span>
                         </p>
                     </div>
 
@@ -200,7 +213,9 @@
                             <p class=" text-center"> <b>Thi Thử Phần Nghe</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Nghe</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-headset"></i> Nghe
+                            </span>
                         </p>
                     </div>
 
@@ -226,7 +241,9 @@
                             <p class="  text-center"> <b>Thi Thử Phần Đọc</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Đọc</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-clipboard-check"></i> Đọc
+                            </span>
                         </p>
                     </div>
 
@@ -252,7 +269,9 @@
                             <p class=" text-center"> <b>Thi Thử Toàn Bài</b></p>
                         </div>
                         <p class="text-center">
-                            <span class="badge rounded-pill bg-primary">Toàn Bài</span>
+                            <span class="badge rounded-pill bg-primary">
+                                <i class="bi bi-list-columns"></i> Toàn Bài
+                            </span>
                         </p>
                     </div>
 
