--- a/ToeicWeb/Areas/Admin/Views/Quanlybainge/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Quanlybainge/Index.cshtml
@@ -1,14 +1,12 @@
 ﻿
 
-<div class="container" >
-
+<div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
             <h2 class="text-primary">
                 Quản lý bài nge
             </h2>
         </div>
-
     </div>
 
     <div class="row pt-2">
@@ -17,44 +15,37 @@
                 <i class="bi bi-plus-circle"></i>  Thêm bài nge mới
             </a>
         </div>
-
     </div>
-
-    <table class="table table-bordered"
-    <thead>
-       <tr>
-           <th>ID</th>
-           <th>ETS</th>
-           <th>TEST</th>
-           <th>PART</th>
-       </tr>
-    </thead>
-
-    <tbody>
-           
-                                <td class="text-primary">ID</td>
-                                <td class="text-primary">ETS</td>
-                                <td class="text-primary">TEST</td>
-                                <td class="text-primary">PART</td>
-
-
-                           <td>
-                               <div class="w-75 btn-group" role="group">
-                                      <a asp-area="Admin" asp-controller="Category" asp-action="Edit" asp-route-Id ="Id" class="btn btn-primary mx-2">
-                                       <i class="bi bi-pencil-square"></i> Edit
-                                   </a>
-                                       <a asp-area="Admin" asp-controller="Category" asp-action="Delete" asp-route-Id ="Id" class="btn btn-danger mx-2">
-                                       <i class="bi bi-trash3"></i> Delete
-                                   </a>
-                               </div>
-                            </td>
-                        </tr>
-            
-    </tbody>
-
-</table>
-
-   
+    <div class="card-body p-4">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>ETS</th>
+                    <th>TEST</th>
+                    <th>PART</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="text-primary">ID</td>
+                    <td class="text-primary">ETS</td>
+                    <td class="text-primary">TEST</td>
+                    <td class="text-primary">PART</td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-area="Admin" asp-controller="Category" asp-action="Edit" asp-route-Id="Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i> Edit
+                            </a>
+                            <a asp-area="Admin" asp-controller="Category" asp-action="Delete" asp-route-Id="Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash3"></i> Delete
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 
