--- a/ToeicWeb/Areas/Admin/Views/User/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/User/Index.cshtml
@@ -1,11 +1,12 @@
-﻿﻿<div class="card shadow border-0 mx-3">
-    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h2 class="text-white py-2">Danh sách tài khoản</h2>
-            </div>
+﻿<div class="container" >
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary">
+                Danh sách tài khoản
+            </h2>
         </div>
     </div>
+
     <div class="card-body p-4">
         <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
