--- a/ToeicWeb/Areas/Admin/Views/User/RoleManagment.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/User/RoleManagment.cshtml
@@ -1,12 +1,12 @@
 ﻿@model RoleManagmentVM
 
-<div class="card shadow border-0 mt-4 mx-3">
-    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
-    <div class="row">
-        <div class="col-12 text-center">
-                <h2 class="text-white py-2">Quản lý vai trò</h2>
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary">
+                Quản lý vai trò
+            </h2>
         </div>
-    </div>
     </div>
     <div class="card-body p-4">
         <form method="post" class="row">
