--- a/ToeicWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ToeicWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -8,6 +8,7 @@
 
 @* <partial name="_StatusMessage" for="StatusMessage" /> *@
 <div class="row justify-content-center">
+    @await Html.PartialAsync("_NavbarBack");
     <h3 class="text-center"> @ViewData["Title"]</h3>
     <div class="px-20">
         <form id="profile-form" method="post">
