--- a/ToeicWeb/Views/Shared/_LoginPartial.cshtml
+++ b/ToeicWeb/Views/Shared/_LoginPartial.cshtml
@@ -8,17 +8,17 @@
 {
 
     <li class="nav-item">
-        <a id="manage" class="nav-link " asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a id="manage" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
    
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link " id="register" asp-area="Identity" asp-page="/Account/Register">Đăng ký</a>
+            <a class="nav-link text-white" id="register" asp-area="Identity" asp-page="/Account/Register">Đăng ký</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link " id="login" asp-area="Identity" asp-page="/Account/Login">Đăng nhập</a>
+            <a class="nav-link text-white" id="login" asp-area="Identity" asp-page="/Account/Login">Đăng nhập</a>
     </li>
 }
 </ul>
