--- a/ToeicWeb/Areas/Admin/Views/Quanlybainge/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Quanlybainge/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿
 
 <div class="container">
-    <div class="row pt-4 pb-3">
+    <div class="row pt-4 pb-3 mx-2">
         <div class="col-6">
             <h2 class="text-primary">
                 Quản lý bài nge
             </h2>
         </div>
+        <hr class="mx-3" style="width:98%" />
     </div>
-
-    <div class="row pt-2">
+    <div class="row pt-2 ms-2">
         <div class="col-6 col-md-3">
             <a asp-area="Admin" asp-controller="Quanlybainge" asp-action="Create" class="btn btn-primary  border  form-control">
                 <i class="bi bi-plus-circle"></i>  Thêm bài nge mới
