--- a/ToeicWeb/Areas/Admin/Views/User/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/User/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿<div class="container" >
-    <div class="row pt-4 pb-3">
+    <div class="row pt-4 pb-3 mx-2">
         <div class="col-6">
             <h2 class="text-primary">
                 Danh sách tài khoản
             </h2>
         </div>
+        <hr class="mx-3" style="width:98%" />
+
     </div>
 
     <div class="card-body p-4">
