--- a/ToeicWeb/Views/Shared/_NavbarBack.cshtml
+++ b/ToeicWeb/Views/Shared/_NavbarBack.cshtml
@@ -3,7 +3,7 @@
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item m-sm-2 fs-6 text-light d-sm-flex">
-                    <a class="nav-link text-sm-center fw-medium tranN " asp-area="Customer" asp-controller="Home" asp-action="Index">
+                    <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">
                         <i class="bi bi-chevron-left pe-sm-3"></i>
                     </a>Back
             </ul>
