--- a/ToeicWeb/Areas/Admin/Views/User/RoleManagment.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/User/RoleManagment.cshtml
@@ -1,12 +1,14 @@
 ﻿@model RoleManagmentVM
 
 <div class="container">
-    <div class="row pt-4 pb-3">
+    <div class="row pt-4 pb-3 mx-2">
         <div class="col-6">
             <h2 class="text-primary">
-                Quản lý vai trò
+                User Managment Role
             </h2>
         </div>
+        <hr class="mx-3" style="width:98%" />
+
     </div>
     <div class="card-body p-4">
         <form method="post" class="row">
