--- a/ToeicWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ToeicWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -20,7 +20,9 @@
             
         </form>
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="w-100 btn btn-lg btn-primary">Đăng xuất</button>
+            <button id="logout" type="submit" class="w-100 btn btn-lg btn-primary">
+                <i class="bi bi-box-arrow-right"></i> Đăng xuất
+            </button>
         </form>
     </div>
 
