--- a/ToeicWeb/Views/Shared/_NavbarBack.cshtml
+++ b/ToeicWeb/Views/Shared/_NavbarBack.cshtml
@@ -5,7 +5,8 @@
                 <li class="nav-item m-sm-2 fs-6 text-light d-sm-flex">
                     <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">
                         <i class="bi bi-chevron-left pe-sm-3"></i>
-                    </a>Back
+                    </a>
+                    <span class="mt-sm-1">Back</span>
             </ul>
         </div>
     </div>
