--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -58,62 +58,67 @@
                             <h4 class="text-section">Quản lý</h4>
                         </li>
                         <li class="nav-item">
-                            <a class=" py-3" asp-area="Admin" asp-controller="Quanlybainge" asp-action="Index">
+                            <a class="sidebar-link collapsed py-3" asp-area="Admin" asp-controller="Quanlybainge" asp-action="Index">
                                 <i class="bi bi-headset"></i>
                                 <p>Quản lý bài nge</p>
                             </a>
 
                         </li>
                         <li class="nav-item">
-                            <a class=" py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
+                            <a class="sidebar-link collapsed py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
                                 <i class="bi bi-pen-fill"></i>
                                 <p>Quản lý bài đọc</p>
                             </a>
 
                         </li>
                         <li class="nav-item">
-                            <a class=" py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
+                            <a class="sidebar-link collapsed py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
                                 <i class="bi bi-layout-text-sidebar"></i>
                                 <p>Quản lý đề thi</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class=" py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
+                            <a class="sidebar-link collapsed py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
                                 <i class="bi bi-folder2-open"></i>
                                 <p>Quản lý bài từ vựng</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class=" py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
+                            <a class="sidebar-link collapsed py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
                                 <i class="bi bi-archive"></i>
                                 <p>Quản lý bài ngữ pháp</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class=" py-3" asp-area="Admin" asp-controller="User" asp-action="Index">
+                            <a class="sidebar-link collapsed py-3" asp-area="Admin" asp-controller="User" asp-action="Index">
                                 <i class="bi bi-person-bounding-box "></i>
                                 <p>Quản lý tài khoản</p>
                             </a>
 
                         </li>
                         <li class="nav-item">
-                            <a class="py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
+                            <a class="sidebar-link collapsed py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
                                 <i class="bi bi-house-door "></i>
                                 <p>Trang chủ</p>
                             </a>
                         </li>
+                        <li class="nav-item" style="margin-top:4rem">
+                            <a  class="sidebar-link">
+                                <i class="bi bi-box-arrow-left"></i>
+                                <p>Logout</p>
+                            </a>
+                        </li>
                     </ul>
+
                 </div>
             </div>
         </div>
         <!-- End Sidebar -->
-
         <div class="main-panel">
             <div class="main-header">
                 <div class="main-header-logo">
                     <!-- Logo Header -->
                     <div class="logo-header" data-background-color="dark">
-
                         <div class="nav-toggle">
                             <button class="btn btn-toggle toggle-sidebar">
                                 <i class="gg-menu-right"></i>
@@ -131,39 +136,17 @@
                 <!-- Navbar Header -->
                 <nav class="navbar navbar-header navbar-header-transparent navbar-expand-lg border-bottom">
                     <div class="container-fluid">
-                       @*  <nav class="navbar navbar-header-left navbar-expand-lg navbar-form nav-search p-0 d-none d-lg-flex">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="submit" class="btn btn-search pe-1">
-                                        <i class="fa fa-search search-icon"></i>
-                                    </button>
-                                </div>
-                                <input type="text"
-                                       placeholder="Search ..."
-                                       class="form-control" />
-                            </div>
-                        </nav>*@
-                       
+                        <!-- Main Component -->
+                        <div class="main">
+                            <nav class="navbar navbar-expand px-3">
+                                <!-- Button for sidebar toggle -->
+                                <button class="btn" type="button" data-bs-theme="dark">
+                                    <i class="bi bi-list-ul"></i>
+                                </button>
+                            </nav>
+                        </div>
+
                         <ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
-                            <li class="nav-item topbar-icon dropdown hidden-caret d-flex d-lg-none">
-                                <a class="nav-link dropdown-toggle"
-                                   data-bs-toggle="dropdown"
-                                   href="#"
-                                   role="button"
-                                   aria-expanded="false"
-                                   aria-haspopup="true">
-                                    <i class="fa fa-search"></i>
-                                </a>
-                                <ul class="dropdown-menu dropdown-search animated fadeIn">
-                                    <form class="navbar-left navbar-form nav-search">
-                                        <div class="input-group">
-                                            <input type="text"
-                                                   placeholder="Search ..."
-                                                   class="form-control" />
-                                        </div>
-                                    </form>
-                                </ul>
-                            </li>
                             <li class="nav-item topbar-user dropdown hidden-caret">
                                 <a class="dropdown-toggle profile-pic"
                                    data-bs-toggle="dropdown"
@@ -176,26 +159,11 @@
                                     </span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-user animated fadeIn">
-                                   @*  <div class="dropdown-user-scroll scrollbar-outer">
-                                         <li>
-                                        <div class="user-box">
-
-                                        <div class="u-text">
-                                        <h4>@UserManager.GetUserName(User)</h4>
-                                        <p class="text-muted">@UserManager.GetUserName(User)!</p>
-                                        </div>
-                                        </div>
-                                        </li> *@
-                                  @*   <li>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">My Profile</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Logout</a>
-                                    </li> *@
                                     <li>
                                         <form id="logoutForm" class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                                             <button style="border: none" id="logout" type="submit" class="w-100 p-2 px-sm-2">
-                                                <i class="bi bi-box-arrow-right"></i> Đăng xuất</button>
+                                                <i class="bi bi-box-arrow-left"></i> Đăng xuất
+                                            </button>
                                         </form>
                                     </li>
                                 </ul>
@@ -205,13 +173,11 @@
                 </nav>
                 <!-- End Navbar -->
                 <div class="container">
-                    <main role="main" class="pb-3">
+                    <main role="main" class="">
                         @RenderBody()
                     </main>
                 </div>
             </div>
-
-
         </div>
 
         <!-- Custom template | don't include it in your project! -->
@@ -338,7 +304,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script></script>
     <script src="//cdn.datatables.net/2.1.4/js/dataTables.min.js" asp-append-version="true"></script>
 
-   
+    <script src="~/admin/js/script.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
