--- a/ToeicWeb/Views/Shared/_Navbar.cshtml
+++ b/ToeicWeb/Views/Shared/_Navbar.cshtml
@@ -1,10 +1,10 @@
-﻿@using ToeicWeb.Utility
+﻿    @using ToeicWeb.Utility
 
 <!DOCTYPE html>
 
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-5 bg-secondary">
     <div class="container-fluid">
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TOEIC <i class="bi bi-highlighter"></i></a>
+        <a class="navbar-brand text-d disable fw-bolder fs-4">TOEIC <i class="bi bi-highlighter"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -12,34 +12,34 @@
 
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav me-auto">
-                <li class="nav-item m-sm-2 fs-6 text-light">
-                    <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">
-                        <i class="bi bi-house-door fst-normal ">  Trang chủ</i>
+                <li class="nav-item m-sm-2 fs-6 fw-bold text-d">
+                    <a class="nav-link nav-linkH active" href="#">
+                        <i class="bi bi-house-door-fill"></i>  Home</i>
                     </a>
 
                 </li>
-                <li class="nav-item m-sm-2 fs-6 text-light">
-                    <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Vocabulary">
-                        <i class="bi bi-translate fst-normal "> Từ vựng</i>
+                <li class="nav-item m-sm-2 fs-6 fw-bold text-d">
+                    <a class="nav-link nav-linkH" asp-area="Customer" asp-controller="Home" asp-action="Vocabulary">
+                        <i class="bi bi-translate fst-normal "> Vocabulary</i>
                     </a>
                 </li>
-                <li class="nav-item m-sm-2 fs-6 text-light">
-                    <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Grammar">
-                        <i class="bi bi-book fst-normal "> Ngữ pháp</i>
+                <li class="nav-item m-sm-2 fs-6 fw-bold text-d">
+                    <a class="nav-link nav-linkH" asp-area="Customer" asp-controller="Home" asp-action="Grammar">
+                        <i class="bi bi-book"></i> Grammar</i>
                     </a>
                 </li>
                 @if (User.IsInRole(SD.Role_Admin))
                 {
-                    <li class="nav-item m-sm-2 text-light">
-                        <a class="nav-link" asp-area="Admin" asp-controller="HomeAdmin" asp-action="Index">
+                    <li class="nav-item m-sm-2 fw-bold text-d">
+                        <a class="nav-link nav-linkH" asp-area="Admin" asp-controller="HomeAdmin" asp-action="Index">
                             <i class="bi bi-person-lines-fill fst-normal "> Admin</i>
                         </a>
                     </li>
                 }
             </ul>
                 <ul class="navbar-nav flex-grow-1 d-md-flex justify-content-end">
-                <li class="nav-item m-sm-2 fs-6 text-light">
-                    <a class="nav-link">
+                <li class="nav-item m-sm-2 fs-6 fw-bold text-d">
+                    <a class="nav-link nav-H">
                         <i class="bi-brightness-high-fill fst-normal " id="toggleDark">Giao diện</i>
                     </a>
                 </li>
