--- a/ToeicWeb/Areas/Admin/Views/HomeAdmin/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/HomeAdmin/Index.cshtml
@@ -2,3 +2,117 @@
     ViewData["Title"] = "Home";
 }
 
+<div class="row">
+    <div class="col-xl-3">
+        <div class="card bg-one">
+            <div class="card-body">
+                <div class="db-widgets d-flex align-items-center">
+                    <div class="db-icon">
+                        <i class="fas fa-photo-video"></i>
+                    </div>
+                    <div class="db-info">
+                        @* <h4>@ViewBag.totalLessionOfPart1</h4> *@
+                        <h4>Tổng câu hỏi PART1</h4>
+                        <h6>Bộ câu hỏi Part 1</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3">
+        <div class="card bg-two">
+            <div class="card-body">
+                <div class="db-widgets d-flex align-items-center">
+                    <div class="db-icon">
+                        <i class="fas fa-file-audio"></i>
+                    </div>
+                    <div class="db-info">
+                        @* <h4>totalLessionOfPart2</h4> *@
+                        <h4>Tổng câu hỏi PART2</h4>
+                        <h6>Bộ câu hỏi Part 2</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3">
+        <div class="card bg-four">
+            <div class="card-body">
+                <div class="db-widgets d-flex align-items-center">
+                    <div class="db-icon">
+                        <i class="fas fa-pen-alt"></i>
+                    </div>
+                    <div class="db-info">
+                        <h4>Tổng câu hỏi PART3</h4>
+                        @* <h4>totalLessionOfPart5</h4> *@
+                        <h6>Bộ câu hỏi Part 3</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3">
+        <div class="card bg-four">
+            <div class="card-body">
+                <div class="db-widgets d-flex align-items-center">
+                    <div class="db-icon">
+                        <i class="fas fa-pen-alt"></i>
+                    </div>
+                    <div class="db-info">
+                        @* <h4>totalLessionOfPart5</h4> *@
+                        <h4>Tổng câu hỏi PART4</h4>
+                        <h6>Bộ câu hỏi Part 4</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3">
+        <div class="card bg-four">
+            <div class="card-body">
+                <div class="db-widgets d-flex align-items-center">
+                    <div class="db-icon">
+                        <i class="fas fa-pen-alt"></i>
+                    </div>
+                    <div class="db-info">
+                        @* <h4>totalLessionOfPart5</h4> *@
+                        <h4>Tổng câu hỏi PART5</h4>
+                        <h6>Bộ câu hỏi Part 5</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3">
+        <div class="card bg-four">
+            <div class="card-body">
+                <div class="db-widgets d-flex align-items-center">
+                    <div class="db-icon">
+                        <i class="fas fa-pen-alt"></i>
+                    </div>
+                    <div class="db-info">
+                        @* <h4>totalLessionOfPart5</h4> *@
+                        <h4>Tổng câu hỏi PART6</h4>
+                        <h6>Bộ câu hỏi Part 6</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3">
+        <div class="card bg-four">
+            <div class="card-body">
+                <div class="db-widgets d-flex align-items-center">
+                    <div class="db-icon">
+                        <i class="fas fa-pen-alt"></i>
+                    </div>
+                    <div class="db-info">
+                        @* <h4>totalLessionOfPart5</h4> *@
+                        <h4>Tổng câu hỏi PART7</h4>
+                        <h6>Bộ câu hỏi Part 7</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> 
