--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="~/admin/assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/admin/assets/css/plugins.min.css" />
-    <link rel="stylesheet" href="~/admin/assets/css/kaiadmin.min.css" />
+    <link rel="stylesheet" href="~/admin/assets/css/kaiadminmin.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- CSS Just for demo purpose, don't include it in your project -->
@@ -41,14 +41,28 @@
         <div class="sidebar" data-background-color="dark">
             <div class="sidebar-logo">
                 <!-- Logo Header -->
-                <a asp-area="Admin" asp-controller="HomeAdmin" asp-action="Index" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-center text-primary"><i class="bi bi-layout-text-sidebar"></i> Admin </h3>
-                </a>
+                <div class="logo-header" data-background-color="dark">
+                    <a class=" logo navbar-brand fw-bolder fs-4" 
+                       style="margin-left: 4rem;margin-top: 0.3rem;color: #b9babf;">
+                        ADMIN </a>
+                    <div class="nav-toggle">
+                        <button class="btn btn-toggle toggle-sidebar">
+                            <i class="bi bi-list-task"></i>
+                        </button>
+                        <button class="btn btn-toggle sidenav-toggler">
+                            <i class="gg-menu-left"></i>
+                        </button>
+                    </div>
+                    <button class="topbar-toggler more">
+                        <i class="gg-more-vertical-alt"></i>
+                    </button>
+                </div>
 
                 <!-- End Logo Header -->
             </div>
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
                 <div class="sidebar-content">
+
                     <ul class="nav nav-secondary">
 
                         <li class="nav-section">
@@ -103,9 +117,8 @@
                             </a>
                         </li>
                         <li class="nav-item" style="margin-top:4rem">
-                            <a  class="sidebar-link">
-                                <i class="bi bi-box-arrow-left"></i>
-                                <p>Logout</p>
+                            <a class="sidebar-link" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })">
+                                <i class="bi bi-box-arrow-left"></i><p>Đăng xuất</p>
                             </a>
                         </li>
                     </ul>
@@ -121,7 +134,7 @@
                     <div class="logo-header" data-background-color="dark">
                         <div class="nav-toggle">
                             <button class="btn btn-toggle toggle-sidebar">
-                                <i class="gg-menu-right"></i>
+                               <i class="bi bi-list-task"></i>
                             </button>
                             <button class="btn btn-toggle sidenav-toggler">
                                 <i class="gg-menu-left"></i>
@@ -136,16 +149,6 @@
                 <!-- Navbar Header -->
                 <nav class="navbar navbar-header navbar-header-transparent navbar-expand-lg border-bottom">
                     <div class="container-fluid">
-                        <!-- Main Component -->
-                        <div class="main">
-                            <nav class="navbar navbar-expand px-3">
-                                <!-- Button for sidebar toggle -->
-                                <button class="btn" type="button" data-bs-theme="dark">
-                                    <i class="bi bi-list-ul"></i>
-                                </button>
-                            </nav>
-                        </div>
-
                         <ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
                             <li class="nav-item topbar-user dropdown hidden-caret">
                                 <a class="dropdown-toggle profile-pic"
@@ -160,11 +163,9 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-user animated fadeIn">
                                     <li>
-                                        <form id="logoutForm" class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                                            <button style="border: none" id="logout" type="submit" class="w-100 p-2 px-sm-2">
+                                        <a id="logoutForm" class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                                                 <i class="bi bi-box-arrow-left"></i> Đăng xuất
-                                            </button>
-                                        </form>
+                                        </a>
                                     </li>
                                 </ul>
                             </li>
