--- a/ToeicWeb/Areas/Admin/Views/Quanlybainge/Create.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Quanlybainge/Create.cshtml
@@ -3,7 +3,7 @@
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Thêm bài nge mới</h2>
+                <a class="text-white py-2">Thêm bài nge mới</a>
             </div>
         </div>
     </div>
