--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a class="sidebar-link collapsed py-3" asp-area="Customer" asp-controller="Home" asp-action="Index">
+                            <a class="sidebar-link collapsed py-3" asp-area="Admin" asp-controller="Quanlybaidoc" asp-action="Index">
                                 <i class="bi bi-pen-fill"></i>
                                 <p>Quản lý bài đọc</p>
                             </a>
