Fix change color giao diện

--- a/ToeicWeb/Areas/Admin/Views/Quanlybaidoc/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Quanlybaidoc/Index.cshtml
@@ -20,12 +20,14 @@
             </button>
         </div>
     </div>
-    <div class="card-body p-4">
+    <div class="card-body p-4 text-center">
         <table class="table table-bordered" id="BtTable">
             <thead>
                 <tr>
                     <th> @Html.DisplayNameFor(model => model.Id)</th>
-                    <th> @Html.DisplayNameFor(model => model.Part)</th>
+                    <th>
+                        ETS - TEST - PART
+                    </th>
                 </tr>
             </thead>
             <tbody>
