--- a/ToeicWeb/wwwroot/adminn/assets/css/style.bundle.css
+++ b/ToeicWeb/wwwroot/adminn/assets/css/style.bundle.css
@@ -2105,7 +2105,7 @@ progress {
 }
 .table > :not(caption) > * > * {
   padding: 0.75rem 0.75rem;
-  background-color: var(--bs-table-bg);
+  /*background-color: var(--bs-table-bg);*/
   border-bottom-width: 1px;
   box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
 }
