--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -316,7 +316,7 @@
 											<span class="menu-bullet">
 												<span class="bullet bullet-dot"></span>
 											</span>
-											<span class="menu-title">Quản lý đề</span>
+											<span class="menu-title">Quản lý mã bài tập</span>
 										</a>
 										<!--end:Menu link-->
 									</div>
@@ -364,7 +364,7 @@
 											<span class="menu-bullet">
 												<span class="bullet bullet-dot"></span>
 											</span>
-											<span class="menu-title">Quản lý đề</span>
+											<span class="menu-title">Quản lý mã bài tập</span>
 										</a>
 										<!--end:Menu link-->
 									</div>
