--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -312,7 +312,7 @@
 									<!--begin:Menu item-->
 									<div class="menu-item">
 										<!--begin:Menu link-->
-										<a class="menu-link" asp-area="Admin" asp-controller="Quanlybaidoc" asp-action="Index">
+										<a class="menu-link" asp-area="Admin" asp-controller="Quanlymabaitapdoc" asp-action="Index">
 											<span class="menu-bullet">
 												<span class="bullet bullet-dot"></span>
 											</span>
