--- a/ToeicWeb/Areas/Admin/Views/MaBTdoc/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/MaBTdoc/Index.cshtml
@@ -58,5 +58,5 @@
 
 
 @section Scripts {
-    <script src="~/adminn/js/baitapdoc.js"></script>
+    <script src="~/adminn/js/mabtdoc.js"></script>
 }
