--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -312,11 +312,11 @@
 									<!--begin:Menu item-->
 									<div class="menu-item">
 										<!--begin:Menu link-->
-										<a class="menu-link" asp-area="Admin" asp-controller="Quanlymabaitapdoc" asp-action="Index">
+										<a class="menu-link" asp-area="Admin" asp-controller="MaBTdoc" asp-action="Index">
 											<span class="menu-bullet">
 												<span class="bullet bullet-dot"></span>
 											</span>
-											<span class="menu-title">Quản lý mã bài tập</span>
+											<span class="menu-title">Quản lý mã bài đọc</span>
 										</a>
 										<!--end:Menu link-->
 									</div>
@@ -324,12 +324,12 @@
 									<!--begin:Menu item-->
 									<div class="menu-item">
 										<!--begin:Menu link-->
-										<a class="menu-link" href="#" data-kt-page="pro">
+										<a class="menu-link" asp-area="Admin" asp-controller="CauhoiBTdoc" asp-action="Index">
 											<span class="menu-bullet">
 												<span class="bullet bullet-dot"></span>
 											</span>
 											<span class="menu-title">
-												Quản lý bài tập
+												Quản lý bài đọc
 											</span>
 										</a>
 										<!--end:Menu link-->
